[package]
name = "marquee"
version = "0.1.0"
authors = ["uwe_pachler <uwe.pachler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = {version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
rocket_oauth2  = { git="https://github.com/jebrosen/rocket_oauth2.git", branch="master"}
jsonwebtoken = "5"
base64 = "0.10"
reqwest = "0.9.21"
