[package]
name = "marquee"
version = "0.1.0"
authors = ["uwe_pachler <uwe.pachler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.4.4", default-features=false}
openidconnect = {path = "../openidconnect-rs"} # "1.0.0-alpha.13"
url = "2.1.1"
failure = "0.1.0"